# stuntrally

./: .favorites.json  .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  Contributing.md  README.md  Readme.md  Readme.txt  SR_Editor.sln  SR_Editor.vcproj  SR_Editor.vcxproj  SR_Editor.vcxproj.filters  SR_EditorVS11.sln  StuntRally.sln  StuntRally.vcproj  StuntRally.vcxproj  StuntRally.vcxproj.filters  StuntRallyVS11.sln  StuntRallyVS11.vcproj  _editor-default.cfg  _game-default.cfg  _game-min.cfg  _game.cfg  _plugins.cfg  _plugins_nix.cfg  _plugins_nix_d.cfg  conanfile.py  ogre2_build.md  vcpkg.json
Source/: CMakeLists.txt
Source/btOgre/: BtOgre.cpp  BtOgreAnim.cpp  BtOgreDebug.cpp  BtOgreDebug.h  BtOgreGP.h  DynamicLines.cpp  DynamicLines.h
Source/bullet/: Bullet-C-Api.h
Source/editor/: BaseApp.cpp  BaseApp.h  BaseApp_Create.cpp  Gui_Events.cpp  Gui_Graphics.cpp  Gui_Init.cpp  Gui_Util.cpp  OgreApp.cpp  OgreApp.h  Render2tex.cpp  SceneInit.cpp  StartPos.cpp  TerrainEdit.cpp  Update_Edit.cpp  Update_Key.cpp  main.cpp  settings.cpp  settings.h  stdafx.h
Source/ogre/: BaseApp.cpp  BaseApp.h  BaseApp_Create.cpp  FollowCamera.cpp  FollowCamera.h  Gui.cpp  Gui_Init.cpp  Hud.cpp  OgreGame.cpp  OgreGame.h  QTimer.cpp  QTimer.h  SceneCar.cpp  SceneInit.cpp  TrackVdr.cpp  Update.cpp  main.cpp  stdafx.h
Source/paged-geom/: BatchPage.cpp  BatchedGeometry.cpp  BatchedGeometry.h  GrassLoader.cpp  ImpostorPage.cpp  MersenneTwister.h  PropertyMaps.cpp  PropertyMaps.h  StaticBillboardSet.cpp  TreeLoader2D.cpp  TreeLoader2D.h  TreeLoader3D.cpp  WindBatchPage.cpp  WindBatchPage.h
Source/road/: Road.h  Road_Edit.cpp  Road_File.cpp  Road_Mesh.cpp  Road_Rebuild.cpp  SplineBase.cpp  SplineBase.h
Source/vdrift/: aabb.h  ai.cpp  ai.h  bezier.h  car.cpp  car.h  carbrake.h  carcontrolmap_local.cpp  carcontrolmap_local.h  cardifferential.h  cardynamics.cpp  cardynamics.h  cardynamics_load.cpp  carfueltank.h  cartelemetry.h  cartire.h  carwheel.h  collision_contact.h  collision_detection.cpp  collision_detection.h  collision_world.cpp  collision_world.h  configfile.h  containeralgorithm.cpp  containeralgorithm.h  coordinatesystems.cpp  coordinatesystems.h  crashdetection.cpp  crashdetection.h  endian_utility.cpp  endian_utility.h  eventsystem.cpp  eventsystem.h  forcefeedback.h  game.cpp  game.h  joepack.h  joeserialize.cpp  joeserialize.h  k1999.cpp  (+46 more)
config/: CMakeLists.txt  binds-default-nix.xml  binds-default-win.xml  binds-default.xml  cars.xml  challenges.xml  championships.xml  colors.ini  controls-default.cfg  editor-default.cfg  game-default.cfg  game-min.cfg  keys-default.xml  presets.xml  resources.cfg  resources_ed.cfg  resources_s.cfg  resources_s_ed.cfg  times.xml  tracks.ini  tracks.xml
data/: CMakeLists.txt
data/cars/: cameras.xml  surfaces.cfg
data/compositor/: StdQuad_fp.program
data/editor/: ReflectionCube.dds  box.mesh  box_fluids.mesh  box_obj.mesh  car.mesh  cube.mesh  editor.matdef  render.cg  render.hlsl  render.material  render.program  render_fragment.glsl  render_gr_fragment.glsl  render_vertex.glsl  road_ed.material
data/fonts/: Digital_41.fontdef  Vera.fontdef  Vrinda_51.fontdef  _fonts.txt  console.fontdef
data/ghosts/: 0W1-cross.gho  0W10-Whirl.gho  0W11-Glacier.gho  0W12-Peaks.gho  0W13-MtFog.gho  0W2-Wet.gho  0W3-mouth.gho  0W4-ice-blur.gho  0W5-Circles.gho  0W6-88.gho  0W7-LJs-Mntn.gho  0W8-pipe8x8.gho  0W9-IceFrenzy.gho  A1-StuntPark.gho  A2-PipeCoil.gho  A3-Canyon.gho  A4-Snake.gho  A5-TopTwist.gho  A6-Cannon.gho  A7-MiningCity.gho  Aln1-AlienBase.gho  Aln1-AlienBase_r.gho  Aln2-Freefall.gho  Aln2-Freefall_r.gho  Aln3-MushroomBeach.gho  Aln3-MushroomBeach_r.gho  Aln4-EjeloOutpost.gho  Aln4-EjeloOutpost_r.gho  Aln5-WhiteLemon.gho  Aln5-WhiteLemon_r.gho  Aln6-Overgrowth.gho  Aln6-Overgrowth_r.gho  Atm1-Autumn_r.gho  Atm10-LakeCity.gho  Atm10-LakeCity_r.gho  Atm2-RedOakPark.gho  Atm2-RedOakPark_r.gho  Atm3-Orange_r.gho  Atm4-Scary.gho  Atm4-Scary_r.gho  (+478 more)
data/grass/: _grass.txt
data/gui/: Common.layout  Editor.layout  Editor_Help.layout  Editor_Main.layout  Editor_Options.layout  Editor_Tools.layout  Editor_Track.layout  Editor_Utils.layout  Game.layout  Game_Help.layout  Game_Main.layout  Game_Options.layout  Game_Replay.layout  Game_Tweak.layout  Game_Utils.layout  MessageBox.layout  MyGUI_Ogre_FP.glsl  MyGUI_Ogre_FP.glsles  MyGUI_Ogre_FP.hlsl  MyGUI_Ogre_VP.glsl  MyGUI_Ogre_VP.glsles  MyGUI_Ogre_VP.hlsl  Options.layout  core.xml  core_blackblueskins.xml  core_blackbluetemplates.xml  core_blackbluetheme.xml  core_font.xml  core_images.xml  core_language.xml  core_language_cs_tag.xml  core_language_de_tag.xml  core_language_en_tag.xml  core_language_english_tag.xml  core_language_es_AR_tag.xml  core_language_es_tag.xml  core_language_fi_tag.xml  core_language_finnish_tag.xml  core_language_fr_tag.xml  core_language_german_tag.xml  (+16 more)
data/hud/: Camera.overlay  CarDbg.overlay  Editor.overlay  Focus.material  FpsDbg.overlay  Hud.matdef  Hud.material  Hud.overlay  Needle_vp.cg  StdQuad_fp.cg  StdQuad_fp.glsl  StdQuad_fp.program  StdQuad_vp.glsl  StdQuad_vp.program  _gui.txt  arrow.cg  arrow.matdef  arrow.material  arrow.mesh  check.mesh
data/lessons/: 1.rpl  2.rpl  3.rpl  4b.rpl  5b.rpl  6.rpl  7.rpl
data/loading/: info.txt
data/material_templates/: _detroit.mat  _dirt3.mat  _mosport.mat  _ruudskogen.mat  _virginia.mat  _weekend.mat  _zandvoort.mat  arrow.shaderset  car.mat  car_particle.mat  core.h  editor.mat  grass.mat  main.definition  main.mat  main.shader  main.shaderset  materials.lod  objects_dynamic.mat  objects_static.mat  road.mat  road_wall_pipe.mat  shadows.h  sky.mat  stuntrally.configuration  terrain.shader  terrain.shaderset  test.instance  test.mat  tire_particle.mat  trees.mat  trees_ch.mat  trees_old.mat  water.mat  water.shader  weather.mat
data/materials/: _grass.txt  _virginia.mat  _weekend.mat  angles.mat  angles.shader  angles.shaderset  arrow.mat  arrow.shader  blend.mat  blend.shader  blend.shaderset  body.material  car.mat  car.matdef  car.material  car_old.material  core.h  (+67 more)
source/: CMakeLists.txt
(+2595 files in other folders)
